Create template for UI.

--- a/dev/index.html
+++ b/dev/index.html
@@ -2,10 +2,163 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>What is my User-Agent?</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="deneme">Hede</div>
+<div class="header">
+    <div class="container">
+        <h1>
+            <span class="hidden-sm">My User Agent?</span>
+            <span class="hidden-xs">What is My User Agent?</span>
+        </h1>
+
+        <p><span>Remote Address:</span> {Data}</p>
+
+        <p><span>User-Agent:</span> {Data}</p>
+    </div>
+</div>
+<div class="main">
+    <div class="container">
+        <form class="form-horizontal" action="">
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="dualOrientation">Dual Orientation</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="dualOrientation" id="dualOrientation">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="inputDevice">Input Device</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="inputDevice" id="inputDevice">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="wirelessDevice">Wireless Device</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="wirelessDevice" id="wirelessDevice">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="tablet">Tablet</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="tablet" id="tablet">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="desktop">Desktop</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="desktop" id="desktop">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="bot">Bot</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="bot" id="bot">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="ajaxSupportJavascript">Ajax Support Javascript</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxSupportJavascript"
+                           id="ajaxSupportJavascript">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="ajaxSupportGetElementById">Ajax Support Get Element By
+                    Id</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxSupportGetElementById"
+                           id="ajaxSupportGetElementById">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="ajaxSupportInnerHtml">Ajax Support Inner Html</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxSupportInnerHtml" id="ajaxSupportInnerHtml">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="ajaxManipulateDom">Ajax Manipulate Dom</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxManipulateDom" id="ajaxManipulateDom">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="ajaxManipulateCss">Ajax Manipulate Css</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxManipulateCss" id="ajaxManipulateCss">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="ajaxSupportEvents">Ajax Support Events</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxSupportEvents" id="ajaxSupportEvents">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="ajaxSupportEventListener">Ajax Support Event
+                    Listener</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="ajaxSupportEventListener"
+                           id="ajaxSupportEventListener">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="xhtmlFormatAsCssProperty">Xhtml Format As Css
+                    Property</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="xhtmlFormatAsCssProperty"
+                           id="xhtmlFormatAsCssProperty">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="xhtmlFormatAsAttribute">Xhtml Format As
+                    Attribute</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="xhtmlFormatAsAttribute"
+                           id="xhtmlFormatAsAttribute">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="marketingName">Marketing Name</label>
+
+                <div class="col-xs-6">
+                    <input class="form-control medium" type="text" name="marketingName" id="marketingName">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label  col-xs-6" for="imageInlining">Image Inlining</label>
+
+                <div class="col-xs-6">
+                    <input type="checkbox" name="imageInlining"
+                           id="imageInlining">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-6" for="from">From</label>
+
+                <div class="col-xs-6">
+                    <input class="form-control medium" type="text" name="from" id="from">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
